Removed transition. Fixed jumping text.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,42 +26,24 @@ transform: scale(1);
 transform: scale(1.02);
 -ms-transform: scale(1.02);
  
--webkit-transition: all .4s ease-out; 
--moz-transition: all .4s ease-out; 
--o-transition: all .4s ease-out; 
-transition: all .4s ease-out;
-transform-style: preserve-3d;
-opacity: 1;
+
 }
 
 .tiles .description {
 opacity: 0;
 position: absolute;
-top: 60px;
+top: 55px;
 width: 200px;
 text-align: center;
 font-size: 20px;
 }
 .tiles .item:hover .description {
-transition-delay: 0.2s;
--moz-transition-delay: 0.2s; /* Firefox 4 */
--webkit-transition-delay: 0.2s; /* Safari and Chrome */
--o-transition-delay: 0.2s; /* Opera */
--webkit-transition: all .2s ease-out; 
--moz-transition: all .2s ease-out; 
--o-transition: all .2s ease-out; 
-transition: all .2s ease-out;
 opacity: 1;
 }
 
 .tiles .item .description {
 color: #FFF;
 text-decoration:none;
--webkit-transition: all .4s ease-out; 
--moz-transition: all .4s ease-out; 
--o-transition: all .4s ease-out; 
-transition: all .4s ease-out;
-transform-style: preserve-3d;
 }
 
 .tiles .item:hover .overlay {
